Adds cell to copy MediaPipe task bundle to Google Drive

--- a/codelabs/litert_inference/Gemma3_1B_Fine_Tuning_text_to_sql.ipynb
+++ b/codelabs/litert_inference/Gemma3_1B_Fine_Tuning_text_to_sql.ipynb
@@ -7553,7 +7553,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/google-ai-edge/mediapipe-samples/blob/main/Gemma3_1B_Fine_Tuning_text_to_sql.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/google-ai-edge/mediapipe-samples/blob/main/codelabs/litert_inference/Gemma3_1B_Fine_Tuning_text_to_sql.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -7592,7 +7592,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -7968,7 +7968,7 @@
       "metadata": {
         "id": "U8b0AFNELllJ"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8125,7 +8125,7 @@
         "id": "C1qFUIDwL2KP",
         "outputId": "7e6854b0-b320-4d8b-bcda-cb04957b3aaf"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8368,7 +8368,7 @@
         },
         "outputId": "6c516766-9cee-44bd-8cab-b33f122dd9fb"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8511,7 +8511,7 @@
       "metadata": {
         "id": "nBPb0IOmMyjK"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8558,7 +8558,7 @@
       "metadata": {
         "id": "7h_-rFGvM3FO"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8627,7 +8627,7 @@
         "id": "xr1ievngM6GG",
         "outputId": "431fc2bf-95f3-472a-bdaf-d506cfc83446"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8706,7 +8706,7 @@
         "id": "iRMI6aAyNFnx",
         "outputId": "facf7503-d89e-4c55-9858-c98bf9855f30"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -10030,7 +10030,7 @@
       "metadata": {
         "id": "UbamrfNiUciJ"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -10065,7 +10065,7 @@
         },
         "outputId": "b77cc0f9-cc4e-4cc5-dc3f-d02d03bba8c9"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -10114,7 +10114,7 @@
       "metadata": {
         "id": "IFB2W_VMvROH"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -10164,7 +10164,7 @@
         "id": "mh1Pu07Vvlmu",
         "outputId": "58b6e63c-ac2b-40a6-a04b-39e14c516ee3"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10276,7 +10276,7 @@
         },
         "outputId": "aaff2dfd-ceae-4484-aeff-210755edb9bc"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10300,7 +10300,7 @@
       "metadata": {
         "id": "XPK7L844pLSM"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -10377,7 +10377,7 @@
         },
         "outputId": "97f9a3da-193d-47c8-9518-94d3137bff60"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -10463,7 +10463,7 @@
       "metadata": {
         "id": "vRga1sTDpPZH"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -10721,7 +10721,7 @@
       "metadata": {
         "id": "2KPoRCaZpQxE"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -10742,7 +10742,7 @@
       "metadata": {
         "id": "U33LaaCKpUFv"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -10757,7 +10757,7 @@
         "id": "LuI6OGsTpUpR",
         "outputId": "101e1e72-f7ef-4be4-ff06-3a69fa5338b1"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10796,7 +10796,7 @@
       "metadata": {
         "id": "EwWofyxkpWGQ"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -10828,7 +10828,23 @@
       "metadata": {
         "id": "Dtj9nytmpX8G"
       },
-      "execution_count": 24,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Copy MediaPipe task bundle to Google Drive.\n",
+        "from google.colab import drive\n",
+        "import shutil\n",
+        "\n",
+        "drive.mount('/content/drive')\n",
+        "shutil.copy(\"gemma3_1b_finetune_q8_ekv1024.task\",\"/content/drive/MyDrive/\")"
+      ],
+      "metadata": {
+        "id": "1ZDAWOfEn5BF"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
