--- a/codelabs/litert_inference/Gemma3_1B_Fine_Tuning_text_to_sql.ipynb
+++ b/codelabs/litert_inference/Gemma3_1B_Fine_Tuning_text_to_sql.ipynb
@@ -969,7 +969,7 @@
         "      tflite_model=tflite_model,\n",
         "      tokenizer_model=tokenizer_model,\n",
         "      start_token=\"<bos>\",\n",
-        "      stop_tokens=[\"<eos>\"],\n",
+        "      stop_tokens=[\"<eos>\", \"<end_of_turn>\"],\n",
         "      output_filename=output_file,\n",
         "      enable_bytes_to_unicode_mapping=False,\n",
         "      prompt_prefix=\"<start_of_turn>user\\n\",\n",
