--- a/codelabs/litert_inference/Gemma3_1B_Fine_Tuning_text_to_sql.ipynb
+++ b/codelabs/litert_inference/Gemma3_1B_Fine_Tuning_text_to_sql.ipynb
@@ -78,8 +78,6 @@
         "  \"evaluate==0.4.3\" \\\n",
         "  \"trl==0.15.2\" \\\n",
         "  \"peft==0.14.0\" \\\n",
-        "  protobuf \\\n",
-        "  sentencepiece \\\n",
         "  \"flash-attn==2.7.4.post1\" \\\n",
         "  ai-edge-torch-nightly==0.6.0.dev20250523 \\\n",
         "  ai-edge-litert==1.3.0 \\\n",
@@ -296,8 +294,8 @@
         "    max_seq_length=512,                     # max sequence length for model and packing of the dataset\n",
         "    packing=True,                           # Groups multiple samples in the dataset into a single sequence\n",
         "    # For real use-cases, you will want to train your model with epochs rather than a small number of steps\n",
-        "    num_train_epochs=3,                    # number of training epochs\n",
-        "    #max_steps=100,\n",
+        "    num_train_epochs=3,                     # number of training epochs\n",
+        "    #max_steps=100,                          # mutually exclusive with num_train_epochs\n",
         "    per_device_train_batch_size=1,          # batch size per device during training\n",
         "    gradient_accumulation_steps=4,          # number of steps before performing a backward/update pass\n",
         "    gradient_checkpointing=True,            # use gradient checkpointing to save memory\n",
@@ -917,7 +915,15 @@
     {
       "cell_type": "code",
       "source": [
-        "output = pipeline.generate(prompt, max_decode_steps = 256)"
+        "output = pipeline.generate(\"\"\"Given the <USER_QUERY> and the <SCHEMA>, generate the corresponding SQL command to retrieve the desired data, considering the query's syntax, semantics, and schema constraints.\n",
+        "\n",
+        "<SCHEMA>\n",
+        "CREATE TABLE materials (material_id INT, name VARCHAR(50), is_organic BOOLEAN); INSERT INTO materials (material_id, name, is_organic) VALUES (1, 'Organic Cotton', true), (2, 'Conventional Cotton', false), (3, 'Organic Hemp', true); CREATE TABLE products_materials (product_id INT, material_id INT); INSERT INTO products_materials (product_id, material_id) VALUES (1, 1), (2, 2), (3, 3), (4, 1);\n",
+        "</SCHEMA>\n",
+        "\n",
+        "<USER_QUERY>\n",
+        "What is the total number of products made from organic materials?\n",
+        "</USER_QUERY>\"\"\", max_decode_steps = 256)"
       ],
       "metadata": {
         "id": "LuI6OGsTpUpR"
@@ -1006,7 +1012,7 @@
         "import shutil\n",
         "\n",
         "drive.mount('/content/drive')\n",
-        "shutil.copy(\"gemma3_1b_finetune_q8_ekv1024.task\",\"/content/drive/MyDrive/\")"
+        "shutil.copy(\"gemma3_1b_finetune_q8_ekv1024.task\", \"/content/drive/MyDrive/\")"
       ],
       "metadata": {
         "id": "1ZDAWOfEn5BF"
