Refactor face landmark visualization functions to use new DrawingUtils

--- a/examples/face_landmarker/python/[MediaPipe_Python_Tasks]_Face_Landmarker.ipynb
+++ b/examples/face_landmarker/python/[MediaPipe_Python_Tasks]_Face_Landmarker.ipynb
@@ -102,9 +102,11 @@
       "outputs": [],
       "source": [
         "#@markdown We implemented some functions to visualize the face landmark detection results. <br/> Run the following cell to activate the functions.\n",
-        "\n",
-        "from mediapipe import solutions\n",
-        "from mediapipe.framework.formats import landmark_pb2\n",
+        "import mediapipe as mp\n",
+        "from mediapipe.tasks import python\n",
+        "from mediapipe.tasks.python import vision\n",
+        "from mediapipe.tasks.python.vision import drawing_utils\n",
+        "from mediapipe.tasks.python.vision import drawing_styles\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
@@ -118,32 +120,32 @@
         "    face_landmarks = face_landmarks_list[idx]\n",
         "\n",
         "    # Draw the face landmarks.\n",
-        "    face_landmarks_proto = landmark_pb2.NormalizedLandmarkList()\n",
-        "    face_landmarks_proto.landmark.extend([\n",
-        "      landmark_pb2.NormalizedLandmark(x=landmark.x, y=landmark.y, z=landmark.z) for landmark in face_landmarks\n",
-        "    ])\n",
         "\n",
-        "    solutions.drawing_utils.draw_landmarks(\n",
+        "\n",
+        "    drawing_utils.draw_landmarks(\n",
         "        image=annotated_image,\n",
-        "        landmark_list=face_landmarks_proto,\n",
-        "        connections=mp.solutions.face_mesh.FACEMESH_TESSELATION,\n",
+        "        landmark_list=face_landmarks,\n",
+        "        connections=vision.FaceLandmarksConnections.FACE_LANDMARKS_TESSELATION,\n",
         "        landmark_drawing_spec=None,\n",
-        "        connection_drawing_spec=mp.solutions.drawing_styles\n",
-        "        .get_default_face_mesh_tesselation_style())\n",
-        "    solutions.drawing_utils.draw_landmarks(\n",
+        "        connection_drawing_spec=drawing_styles.get_default_face_mesh_tesselation_style())\n",
+        "    drawing_utils.draw_landmarks(\n",
         "        image=annotated_image,\n",
-        "        landmark_list=face_landmarks_proto,\n",
-        "        connections=mp.solutions.face_mesh.FACEMESH_CONTOURS,\n",
+        "        landmark_list=face_landmarks,\n",
+        "        connections=vision.FaceLandmarksConnections.FACE_LANDMARKS_CONTOURS,\n",
         "        landmark_drawing_spec=None,\n",
-        "        connection_drawing_spec=mp.solutions.drawing_styles\n",
-        "        .get_default_face_mesh_contours_style())\n",
-        "    solutions.drawing_utils.draw_landmarks(\n",
+        "        connection_drawing_spec=drawing_styles.get_default_face_mesh_contours_style())\n",
+        "    drawing_utils.draw_landmarks(\n",
         "        image=annotated_image,\n",
-        "        landmark_list=face_landmarks_proto,\n",
-        "        connections=mp.solutions.face_mesh.FACEMESH_IRISES,\n",
+        "        landmark_list=face_landmarks,\n",
+        "        connections=vision.FaceLandmarksConnections.FACE_LANDMARKS_LEFT_IRIS,\n",
         "          landmark_drawing_spec=None,\n",
-        "          connection_drawing_spec=mp.solutions.drawing_styles\n",
-        "          .get_default_face_mesh_iris_connections_style())\n",
+        "          connection_drawing_spec=drawing_styles.get_default_face_mesh_iris_connections_style())\n",
+        "    drawing_utils.draw_landmarks(\n",
+        "        image=annotated_image,\n",
+        "        landmark_list=face_landmarks,\n",
+        "        connections=vision.FaceLandmarksConnections.FACE_LANDMARKS_RIGHT_IRIS,\n",
+        "          landmark_drawing_spec=None,\n",
+        "          connection_drawing_spec=drawing_styles.get_default_face_mesh_iris_connections_style())\n",
         "\n",
         "  return annotated_image\n",
         "\n",
