Update Gesture Recognizer notebook to use new drawing utils

--- a/examples/gesture_recognizer/python/gesture_recognizer.ipynb
+++ b/examples/gesture_recognizer/python/gesture_recognizer.ipynb
@@ -107,7 +107,6 @@
         "#@markdown We implemented some functions to visualize the gesture recognition results. <br/> Run the following cell to activate the functions.\n",
         "from matplotlib import pyplot as plt\n",
         "import mediapipe as mp\n",
-        "from mediapipe.framework.formats import landmark_pb2\n",
         "\n",
         "plt.rcParams.update({\n",
         "    'axes.spines.top': False,\n",
@@ -124,9 +123,9 @@
         "    'ytick.right': False\n",
         "})\n",
         "\n",
-        "mp_hands = mp.solutions.hands\n",
-        "mp_drawing = mp.solutions.drawing_utils\n",
-        "mp_drawing_styles = mp.solutions.drawing_styles\n",
+        "mp_hands = mp.tasks.vision.HandLandmarksConnections\n",
+        "mp_drawing = mp.tasks.vision.drawing_utils\n",
+        "mp_drawing_styles = mp.tasks.vision.drawing_styles\n",
         "\n",
         "\n",
         "def display_one_image(image, title, subplot, titlesize=16):\n",
@@ -165,14 +164,9 @@
         "        annotated_image = image.copy()\n",
         "\n",
         "        for hand_landmarks in multi_hand_landmarks_list[i]:\n",
-        "          hand_landmarks_proto = landmark_pb2.NormalizedLandmarkList()\n",
-        "          hand_landmarks_proto.landmark.extend([\n",
-        "            landmark_pb2.NormalizedLandmark(x=landmark.x, y=landmark.y, z=landmark.z) for landmark in hand_landmarks\n",
-        "          ])\n",
-        "\n",
         "          mp_drawing.draw_landmarks(\n",
         "            annotated_image,\n",
-        "            hand_landmarks_proto,\n",
+        "            hand_landmarks,\n",
         "            mp_hands.HAND_CONNECTIONS,\n",
         "            mp_drawing_styles.get_default_hand_landmarks_style(),\n",
         "            mp_drawing_styles.get_default_hand_connections_style())\n",
