Update HandLandmarker to use the new drawing utils

--- a/examples/hand_landmarker/python/hand_landmarker.ipynb
+++ b/examples/hand_landmarker/python/hand_landmarker.ipynb
@@ -96,16 +96,17 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "cellView": "form",
         "id": "s3E6NFV-00Qt"
       },
       "outputs": [],
       "source": [
         "#@markdown We implemented some functions to visualize the hand landmark detection results. <br/> Run the following cell to activate the functions.\n",
-        "\n",
-        "from mediapipe import solutions\n",
-        "from mediapipe.framework.formats import landmark_pb2\n",
+        "import mediapipe as mp\n",
         "import numpy as np\n",
+        "\n",
+        "mp_hands = mp.tasks.vision.HandLandmarksConnections\n",
+        "mp_drawing = mp.tasks.vision.drawing_utils\n",
+        "mp_drawing_styles = mp.tasks.vision.drawing_styles\n",
         "\n",
         "MARGIN = 10  # pixels\n",
         "FONT_SIZE = 1\n",
@@ -123,16 +124,12 @@
         "    handedness = handedness_list[idx]\n",
         "\n",
         "    # Draw the hand landmarks.\n",
-        "    hand_landmarks_proto = landmark_pb2.NormalizedLandmarkList()\n",
-        "    hand_landmarks_proto.landmark.extend([\n",
-        "      landmark_pb2.NormalizedLandmark(x=landmark.x, y=landmark.y, z=landmark.z) for landmark in hand_landmarks\n",
-        "    ])\n",
-        "    solutions.drawing_utils.draw_landmarks(\n",
+        "    mp_drawing.draw_landmarks(\n",
         "      annotated_image,\n",
-        "      hand_landmarks_proto,\n",
-        "      solutions.hands.HAND_CONNECTIONS,\n",
-        "      solutions.drawing_styles.get_default_hand_landmarks_style(),\n",
-        "      solutions.drawing_styles.get_default_hand_connections_style())\n",
+        "      hand_landmarks,\n",
+        "      mp_hands.HAND_CONNECTIONS,\n",
+        "      mp_drawing_styles.get_default_hand_landmarks_style(),\n",
+        "      mp_drawing_styles.get_default_hand_connections_style())\n",
         "\n",
         "    # Get the top left corner of the detected hand's bounding box.\n",
         "    height, width, _ = annotated_image.shape\n",
