Update metadata in hand_landmarker.ipynb

--- a/examples/hand_landmarker/python/hand_landmarker.ipynb
+++ b/examples/hand_landmarker/python/hand_landmarker.ipynb
@@ -95,8 +95,9 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "s3E6NFV-00Qt"
+      "metadata": {   
+        "cellView": "form",
+        "id": "s3E6NFV-00Qt"  
       },
       "outputs": [],
       "source": [
